add resource to handle exception (will be continued later)
